fix: icons not showing up in mobile

--- a/src/sass/_common/wallet_header.scss
+++ b/src/sass/_common/wallet_header.scss
@@ -199,7 +199,7 @@
                     }
                 }
                 &-container {
-                    height: calc(100% - 210px);
+                    height: calc(100% - 182px);
                 }
             }
             &-dropdown {
